Added documentation via JavaDocs and Swagger/OpenAPI