@@ -2,9 +2,7 @@ package com.dzieger.security;
 
 import com.dzieger.exceptions.InvalidTokenException;
 import com.dzieger.exceptions.TokenExpiredException;
-import com.dzieger.models.AppUser;
 import com.dzieger.services.AuthService;
-import com.dzieger.services.CustomUserDetails;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
@@ -15,7 +13,6 @@ import org.springframework.security.authentication.UsernamePasswordAuthenticatio
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
@@ -26,6 +23,13 @@ import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 
+/**
+ * **************************** JwtAuthenticationFilter **********************************
+ *
+ * This class is a filter that intercepts incoming requests and checks for a JWT token in the authorization header.
+ * If a token is found, it will validate the token and set the authentication context for the request.
+ *
+ */
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
@@ -41,6 +45,16 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         this.authService = authService;
     }
 
+    /**
+     * This method intercepts incoming requests and checks for a JWT token in the authorization header.
+     * If a token is found, it will validate the token and set the authentication context for the request.
+     *
+     * @param request  HttpServletRequest
+     * @param response HttpServletResponse
+     * @param filter   FilterChain
+     * @throws IOException      IOException
+     * @throws ServletException ServletException
+     */
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filter) throws
             IOException, ServletException {
@@ -52,27 +66,33 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         String username = null;
         String token = null;
 
+        // Extract username and token from Authorization header
+
         if (authorizationHeader != null && authorizationHeader.startsWith("Bearer ")) {
             logger.info("Extracting username and token from Authorization header");
             token = authorizationHeader.substring(7);
             username = jwtUtil.extractUsername(token);
         }
 
+        // If username is found and the authentication context is not set, set the authentication context
         if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
 
             logger.info("Setting authentication context");
             CustomUserDetails userDetails = (CustomUserDetails) userDetailsService.loadUserByUsername(username);
 
             try {
+                // Validate the token
                 if (jwtUtil.validateToken(token, userDetails.getTokenVersion())) {
                     logger.info("Token validated for username: {}", username);
 
+                    // Extract authorities from token
                     List<String> authorities = jwtUtil.extractAuthorities(token);
-                    Collection<GrantedAuthority> grantedAuthorities = authorities.stream()
+                    List<SimpleGrantedAuthority> grantedAuthorities = authorities.stream()
                             .map(SimpleGrantedAuthority::new)
-                            .collect(Collectors.toList());
+                            .toList();
 
-                    var authToken = new UsernamePasswordAuthenticationToken(userDetails, null, userDetails.getAuthorities());
+                    // Set authentication context
+                    var authToken = new UsernamePasswordAuthenticationToken(userDetails, null, grantedAuthorities);
                     authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
                     SecurityContextHolder.getContext().setAuthentication(authToken);
 
